# tmpl-application

./: .gitignore  main.py  pyproject.toml  setup.py
apps/depth_tracking/: column_analyzer.py  config.py  depth_tracker.py  terminal_utils.py  visualizer.py
apps/display/: __init__.py  config.py
apps/display/core/: __init__.py  sdl_app.py  transition_manager.py
apps/display/players/: __init__.py  image_sequence_player.py  video_player.py
apps/display/utils/: __init__.py  playback_statistics.py
apps/generator/core/: file_monitor.py  mask_manager.py  tmpl_monitor.py
apps/generator/utils/: __init.py__  constants.py  diagnostic.py  dynamic_config.py
apps/spade/: __init.py__  train.py
apps/spade/data/: __init__.py  custom_dataset.py  pix2pix_dataset.py
apps/spade/models/: __init__.py  pix2pix_model.py
apps/spade/models/networks/: __init__.py  architecture.py  discriminator.py  generator.py  normalization.py
apps/spade/options/: __init__.py  base_options.py
apps/spade/trainers/: __init__.py
apps/spade/util/: __init__.py  util.py
data/: mask_mapping.json
integration/adapters/: __init__.py  depth_mask_adapter.py  spade_adapter.py
integration/config/: __init__.py  integrated_config.py
integration/core/: __init__.py  integrated_depth.py  integrated_display.py  integrated_spade.py
integration/utils/: __init__.py  console_logger.py  file_logger.py  terminal_utils.py
